--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -139,7 +139,7 @@ section {
         padding: 150px 40px;
         max-height: 480px;
         justify-content: space-around;
-        background-image: url(../images/Rectangle.png);
+        background-image: url(/src/images/Rectangle.png);
         background-repeat: no-repeat;
         padding-bottom: 650px;
         .productive-text {
