--- a/src/scss/responsive.css
+++ b/src/scss/responsive.css
@@ -1,1 +1,168 @@
-/*# sourceMappingURL=responsive.css.map */
+@media screen and (max-width: 1160px) {
+  section .hero form input {
+    width: 290px;
+  }
+  section .hero form button {
+    width: 110px;
+  }
+  section .productive {
+    background-image: none;
+  }
+}
+@media screen and (max-width: 990px) {
+  section .hero img {
+    margin: 60px 0 0 30px;
+    width: 500px;
+  }
+  section .productive .productive-text {
+    max-width: 50%;
+  }
+  section .productive .productive-text .quote {
+    margin: 20px 0;
+  }
+}
+@media screen and (max-width: 860px) {
+  section .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+  }
+  section .hero img {
+    margin: 0 0 0 100px;
+    padding: 0 0 40px 0;
+    width: 400px;
+  }
+  section .hero .hero-text {
+    max-width: 60%;
+  }
+  section .productive {
+    display: flex;
+    flex-direction: column;
+  }
+  section .productive .productive-text {
+    max-width: 60%;
+  }
+  section .productive .productive-image img {
+    margin: 30px 0 20px 100px;
+    width: 400px;
+  }
+  section .cta {
+    padding: 60px 20px;
+  }
+  section .cta .text {
+    max-width: 60%;
+  }
+  section .cta form input {
+    width: 350px;
+  }
+}
+@media screen and (max-width: 700px) {
+  header {
+    padding: 20px 0 0 0;
+  }
+  section .hero img {
+    margin: 0 0 20px 0;
+  }
+  section .productive .productive-image img {
+    margin: 30px 0 20px 0;
+  }
+  section .cta {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  footer .informations {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: space-around;
+  }
+  footer .informations .contacts {
+    padding-bottom: 20px;
+  }
+  footer .informations .contacts .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 10px;
+  }
+  footer .informations .informations2 {
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+  }
+  footer .informations .informations3 {
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+  }
+  footer .informations .social-medias {
+    display: flex;
+  }
+}
+@media screen and (max-width: 496px) {
+  .main {
+    padding: 0 20px;
+  }
+  header {
+    width: 100%;
+  }
+  header .logo {
+    font-size: 30px;
+  }
+  header .navegation {
+    width: 50%;
+    font-size: 18px;
+    gap: 15px;
+  }
+  header .navegation p {
+    word-wrap: nowrap;
+  }
+  section .hero {
+    padding-top: 30px;
+  }
+  section .hero .hero-text {
+    max-width: 80%;
+  }
+  section .hero .hero-text h1 {
+    font-size: 24px;
+  }
+  section .hero .hero-text p {
+    padding-top: 18px;
+  }
+  section .hero form {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  section .hero form input {
+    width: 240px;
+  }
+  section .hero form button {
+    width: 90px;
+  }
+  section .productive .productive-text {
+    max-width: 80%;
+  }
+  section .productive .productive-text .quote {
+    width: 320px;
+  }
+  section .productive .productive-text .quote #text {
+    width: 80%;
+  }
+  section .cta .text {
+    max-width: 80%;
+  }
+  section .cta form input {
+    width: 320px;
+  }
+  section .cta form button {
+    width: 136px;
+  }
+  section .productive {
+    padding: 120px 20px;
+  }
+}/*# sourceMappingURL=responsive.css.map */
