--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -1,3 +1,230 @@
-@media screen and (max-width: 768px) {
-    
+@media screen and (max-width: 1160px) {
+    section {
+        .hero {
+            form {
+                input {
+                    width: 290px;
+                }
+
+                button {
+                    width: 110px;
+                }
+            }
+        }
+        .productive {
+            background-image: none;
+        }
+    }
+}
+
+@media screen and (max-width: 990px) {
+    section {
+        .hero {
+            img {
+                margin: 60px 0 0 30px;
+                width: 500px;
+            }
+        }
+
+        .productive {
+            .productive-text {
+                max-width: 50%;
+                .quote {
+                    margin: 20px 0;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 860px) {
+    section {
+        .hero {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 30px;
+            img {
+                margin: 0 0 0 100px;
+                padding: 0 0 40px 0;
+                width: 400px;
+            }
+
+            .hero-text {
+                max-width: 60%;
+            }
+        }
+
+        .productive {
+            display: flex;
+            flex-direction: column;
+            .productive-text {
+                max-width: 60%;
+            }
+
+            .productive-image {
+                img {
+                    margin: 30px 0 20px 100px;
+                    width: 400px;
+                }
+            }
+        }
+
+        .cta {
+            padding: 60px 20px;
+            .text {
+                max-width: 60%;
+            }
+
+            form {
+                input {
+                    width: 350px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    header {
+        padding: 20px 0 0 0;
+    }
+    section {
+        .hero {
+            img {
+                margin: 0 0 20px 0;
+            }
+        }
+        .productive {
+            .productive-image {
+                img {
+                    margin: 30px 0 20px 0;
+                }
+            }
+        }
+        .cta {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
+
+    footer {
+        .informations {
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 50px;
+            justify-content: space-around;
+
+            .contacts {
+                padding-bottom: 20px;
+                .contact {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    gap: 10px;
+                }
+            }
+
+            .informations2 {
+                padding-bottom: 20px;
+                display: flex;
+                justify-content: space-around;
+                gap: 30px;
+            }
+
+            .informations3 {
+                padding-bottom: 20px;
+                display: flex;
+                justify-content: space-around;
+                gap: 30px;
+            }
+
+            .social-medias {
+                display: flex;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 496px) {
+    .main {
+        padding: 0 20px;
+    }
+
+    header {
+        width: 100%;
+        .logo {
+            font-size: 30px;
+        }
+        
+        .navegation {
+            width: 50%;
+            font-size: 18px;
+            gap: 15px;
+            p {
+                word-wrap: nowrap;
+            }
+        }
+    }
+
+    section {
+        .hero {
+            padding-top: 30px;
+
+            .hero-text {
+                max-width: 80%;
+                h1 {
+                    font-size: 24px;
+                }
+                p {
+                    padding-top: 18px;
+                }
+            }
+
+            form {
+                display: flex;
+                flex-wrap: wrap;
+                input {
+                    width: 240px;
+                }
+                button {
+                    width: 90px;
+                }
+            }
+        }
+
+        .productive {
+            .productive-text {
+                max-width: 80%;
+                .quote {
+                    width: 320px;
+                    #text {
+                        width: 80%;
+                    }
+                }
+            }
+        }
+
+        .cta {
+            .text {
+                max-width: 80%;
+            }
+            form {
+                input {
+                    width: 320px;
+                }
+                button {
+                    width: 136px;
+                }
+            }
+        }
+    }
+
+    section {
+        .productive {
+            padding: 120px 20px;
+        }
+    }
 }
