--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -37,10 +37,16 @@ body {
   padding: 0 40px;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 header {
   display: flex;
   padding: 40px 30px;
   justify-content: space-between;
+  gap: 40px;
 }
 header .logo {
   display: flex;
@@ -52,7 +58,6 @@ header .logo {
   font-weight: 700;
 }
 header img {
-  max-width: 100%;
   height: 1.3em;
 }
 header .navegation {
@@ -63,7 +68,7 @@ header .navegation {
   cursor: pointer;
 }
 
-.padding {
+.container {
   padding: 35px 0 150px 0;
 }
 
@@ -87,10 +92,6 @@ section .hero .hero-text p {
   color: var(--secondary-color);
   padding-top: 20px;
   letter-spacing: 1.3px;
-}
-section .hero .hero-image {
-  max-width: 100%;
-  height: auto;
 }
 section .hero form {
   margin-top: 30px;
@@ -128,12 +129,10 @@ section .hero form button {
 
 section .productive {
   display: flex;
-  padding: 150px 40px;
-  max-height: 480px;
+  padding: 120px 40px;
   justify-content: space-around;
-  background-image: url(../images/Rectangle.png);
+  background-image: url(/src/images/Rectangle.png);
   background-repeat: no-repeat;
-  padding-bottom: 650px;
 }
 section .productive .productive-text {
   max-width: 40%;
@@ -161,11 +160,10 @@ section .productive .productive-text .explain #explain {
   text-decoration: underline;
 }
 section .productive .productive-text .explain img {
-  max-width: 100%;
   padding-top: 6px;
 }
 section .productive .productive-text .quote {
-  margin-top: 40px;
+  margin: 40px 0;
   width: 400px;
   box-shadow: 6px black;
   background-color: var(--primary-color);
@@ -213,9 +211,10 @@ section .cta {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 30px;
 }
 section .cta .text {
-  width: 40%;
+  max-width: 40%;
 }
 section .cta .text h2 {
   font-family: var(--primary-font);
@@ -279,7 +278,6 @@ footer .informations .contacts .logo {
   font-weight: 700;
 }
 footer .informations .contacts .logo img {
-  max-width: 100%;
   height: 1.3em;
 }
 footer .informations .contacts .contact {
@@ -300,7 +298,7 @@ footer .informations .informations2 p:hover {
 footer .informations .informations3 {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   cursor: pointer;
 }
 footer .informations .informations3 p:hover {
@@ -319,7 +317,7 @@ footer .informations .social-medias i:hover {
 }
 @keyframes translateY {
   from {
-    transform: translate(0) scale(1);
+    transform: translateZ(0) scale(1);
   }
   to {
     transform: translateZ(8px) scale(1.2);
